--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
   <!-- Menu Section - Vertical Centered Buttons -->
   <div class="menu-section" id="menuSection">
     <div class="menu">
-      <button onclick="openModal(`<video controls src='ceo-message.mp4'></video>`)">Message from Leadership</button>
+      <button onclick="openModal(`<video controls src='video.mp4'></video>`)">Message from Leadership</button>
       <button onclick="startEthicalDilemma()">Ethical Dilemma</button>
     </div>
   </div>
