--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
           question: "5. You witness harassment in the workplace. What's the right course of action?",
           options: [
             "Ignore it as it's not your business",
-            "Report it to HR or your supervisor",
+            "Report to LPR/Dept ethics coordinator",
             "Join in to fit in with the group",
             "Record it and post on social media"
           ],
